# AFE_technical_test_short_v1

./: .gitignore  CMakeLists.txt  README.md  README.txt  asteroid.hpp  bmp.cpp  bmp.hpp  display.hpp  file_io.hpp  filter.hpp  main.cpp  run.sh  spacecraft.hpp  types.hpp  wrap_to_pi.hpp
notebooks/: playground.ipynb
test_cases/: check_0.csv  check_1.csv  check_2.csv  check_3.csv  check_4.csv  check_5.csv  gt_0.csv  gt_1.csv  gt_2.csv  measure_0.csv  measure_1.csv  measure_2.csv  measure_3.csv  measure_4.csv  measure_5.csv
